@@ -60,6 +60,7 @@ fitMeta,
 fitFeatureModel,
 fitLogNormal,
 fitPA,
+fitMultipleTimeSeries,
 fitSSTimeSeries,
 fitTimeSeries,
 fitZig,
